// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinning  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="sc-gsDJrp bcdozm"
      color="dark-1"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Spinning  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="sc-gsDJrp bcdozm"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-pVTma khbJnp"
        color="dark-1"
      >
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-bdvvaa kCrYla"
        color="dark-1"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-dkPtyc dMzLKC"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-hKwCoD gLeRVx"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-eCImvq kEfBVC"
        color="dark-1"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-jRQAMF kWYHuf"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-gKckTs hOBDFa"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-iCfLBT EXdpw"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-furvIG iSvJhg"
        color="dark-1"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Spinning  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="sc-gsDJrp jCulYQ"
        color="brand"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-pVTma kEjfLT"
        color="accent-1"
      >
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-bdvvaa fEmUTk"
        color="accent-2"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-dkPtyc gKckQj"
        color="accent-3"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-hKwCoD mEZhp"
        color="neutral-1"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-eCImvq fBfLeO"
        color="red"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-jRQAMF hePVgW"
        color="blue"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-gKckTs hOBDFa"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-iCfLBT EXdpw"
        color="dark-1"
      >
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-furvIG iSvJhg"
        color="dark-1"
      >
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Spinning  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hvUCKZ"
    >
      <div
        class="sc-gsDJrp ixvsbo"
        color="brand"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-pVTma bkYTKH"
        color="accent-1"
      >
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-gsDJrp jCulYQ"
        color="brand"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-bdvvaa coGrOu"
        color="accent-2"
      >
        <div />
        <div />
        <div />
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eYPsEs"
      />
      <div
        class="sc-dkPtyc gLjIqr"
        color="accent-3"
      >
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
